--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,7 @@
 body, h1, h2, h3, h4, p, a {
   margin: 0;
-  font-size: 100%; font-weight: normal;
+  font-size: 100%;
+  font-weight: normal;
 }
 
 .page {
@@ -94,7 +95,7 @@ body, h1, h2, h3, h4, p, a {
 }
 
 .two-columns {
-  display: flex; 
+  display: flex;
   margin: auto;
   width: 80%;
   justify-content: space-between;
@@ -309,7 +310,7 @@ body, h1, h2, h3, h4, p, a {
 
 .footer__column-links {
   display: flex;
-  flex-direction: column;  
+  flex-direction: column;
   list-style: none;
   padding: 0;
   margin-top: 20px;
