--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,3 @@
-body, h1, h2, h3, h4, p, a {
-  margin: 0;
-  font-size: 100%;
-  font-weight: normal;
-}
-
 .page {
   min-width: 1100px;
   max-width: 1600px;
@@ -30,7 +24,7 @@ body, h1, h2, h3, h4, p, a {
   height: 32px;
 }
 
-.logo__place_header {
+.logo_place_header {
   position: absolute;
   top: 30px;
   left: 64px;
@@ -58,15 +52,8 @@ body, h1, h2, h3, h4, p, a {
 }
 
 .header__link {
-  font-size: 18px;
-  font-weight: normal;
-  line-height: 25px;
-  width: 388px;
-  left: 64px;
-  bottom: 30px;
   color: #2f80ed;
   text-decoration: none;
-  z-index: 2;
 }
 
 .header__main-illustration {
@@ -112,9 +99,6 @@ body, h1, h2, h3, h4, p, a {
 .two-colums__main-text {
   width: 80%;
   min-width: 784px;
-  flex-direction: column;
-  justify-content: space-between;
-  
 }
 .two-columns__paragraph {
   font-size: 24px;
@@ -132,7 +116,6 @@ body, h1, h2, h3, h4, p, a {
   font-size: 24px;
   font-weight: bold;
   line-height: 34px;
-  order: 1;
 }
 
 .digits {
@@ -157,7 +140,7 @@ body, h1, h2, h3, h4, p, a {
   margin: 0 auto;
   text-align: center;
   font-size: 24px;
-  font-weight: bold;
+  font-weight: normal;
   line-height: 34px;
   padding-top: 20px;
 }
@@ -193,11 +176,14 @@ body, h1, h2, h3, h4, p, a {
 }
 
 .feynman {
-  height: 890px;
+  min-height: 890px;
   display: flex;
   flex-direction: column;
   position: relative;
-  background: url(../images/feynman.png) left bottom no-repeat;
+  background-color: #f2f2f2;
+  background-image: url(../images/feynman.png);
+  background-repeat: no-repeat;
+  background-position: left bottom;
 }
 
 .feynman__title {
@@ -230,7 +216,7 @@ body, h1, h2, h3, h4, p, a {
 }
 
 .kaufman {
-  background-color: #000000;
+  background-color: #1f1f1f;
   color: #ffffff;
   padding: 90px 0;
   display: flex;
@@ -261,7 +247,7 @@ body, h1, h2, h3, h4, p, a {
 .footer {
   min-height: 350px;
   box-sizing: border-box;
-  background-color: #000000;
+  background-color: #1f1f1f;
   display: flex;
   padding: 60px 0 40px;
   justify-content: center;
@@ -280,13 +266,12 @@ body, h1, h2, h3, h4, p, a {
 }
 
 .footer__column_content_copyright {
-  display: flex;
-  justify-content: space-between;
   margin: 0;
   flex-basis: 711px;
+  justify-content: space-between;
 }
 
-.logo__place_footer {
+.logo_place_footer {
   margin: 0;
 }
 
@@ -295,11 +280,6 @@ body, h1, h2, h3, h4, p, a {
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
-}
-
-.footer__column_content_info {
-  display: flex;
-  flex-direction: column;
 }
 
 .footer__column-heading {
@@ -325,11 +305,6 @@ body, h1, h2, h3, h4, p, a {
   font-weight: normal;
 }
 
-.footer__column_content_social {
-  display: flex;
-  flex-direction: column;
-}
-
-.footer__social_icon {
+.footer_social_icon {
   margin-right: 10px;
 }
