--- a/styles/style.css
+++ b/styles/style.css
@@ -41,6 +41,7 @@
 }
 
 .header__subtitle {
+  margin: 0;
   position: absolute;
   font-weight: normal;
   font-size: 18px;
@@ -89,6 +90,7 @@
 }
 
 .two-columns__brief {
+  margin: 0;
   width: 175px;
   font-size: 18px;
   font-weight: normal;
@@ -180,10 +182,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  background-color: #f2f2f2;
-  background-image: url(../images/feynman.png);
-  background-repeat: no-repeat;
-  background-position: left bottom;
+  background: no-repeat left bottom url(../images/feynman.png), #f2f2f2;
 }
 
 .feynman__title {
@@ -283,6 +282,7 @@
 }
 
 .footer__column-heading {
+  margin: 0;
   line-height: 30px;
   font-size: 18px;
   font-weight: bold;
@@ -305,6 +305,6 @@
   font-weight: normal;
 }
 
-.footer_social_icon {
+.footer__social-icon {
   margin-right: 10px;
 }
