--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -2,7 +2,7 @@
     margin: 0 auto;
     width: 920px;
     display: flex;
-    justify-content: space-between;
+    gap: 0 100px;
     flex-wrap: wrap;
     list-style: none;
     padding: 0;
