--- a/blocks/header/__subtitle/header__subtitle.css
+++ b/blocks/header/__subtitle/header__subtitle.css
@@ -4,8 +4,8 @@
     font-weight: normal;
     font-size: 18px;
     line-height: 25px;
-    width: 388px;
+    max-width: 388px;
+    width: 100%;
     left: 64px;
     bottom: 30px;
-    z-index: 2;
   }
