--- a/blocks/header/__title/header__title.css
+++ b/blocks/header/__title/header__title.css
@@ -3,6 +3,6 @@
     font-size: 102px;
     font-weight: bold;
     line-height: 96px;
-    width: 730px;
-    z-index: 2;
+    max-width: 730px;
+    width: 100%;
   }
