--- a/blocks/khan/__book-pic/khan__book-pic.css
+++ b/blocks/khan/__book-pic/khan__book-pic.css
@@ -2,7 +2,7 @@
     margin: 0;
     width: 620px;
     height: 608px;
-    object-fit: none;
+    object-fit: cover;
     object-position: left top;
     overflow: hidden;
 }
